Fix
The gradient background colour was not showing properly on iphone.

--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -74,7 +74,7 @@ button:hover {
 /* TITLE */
 #background {
   background-image: url("./images/cover-gradient-christine.jpg");
-  background-color: white;
+  background-color: #CBE7FD;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -273,21 +273,16 @@ position: absolute;
 @media screen and (max-width: 320px) {
   .title-container {
     font-size: xx-small;
-    padding-top: 60%;
-   }
-
-   #background {
-    width: 100%;
-    height: 420px;
   }
+
   h1 {
     font-size: 1.7rem; }
 
   h2 {
     font-size: 1.45rem; }
 
-  .arrow {
-    display: none; }
+  /* .arrow {
+    display: none; } */
 
   .img-thumbnail {
     display: none; }
@@ -307,18 +302,6 @@ position: absolute;
 
 
 @media screen and (max-width: 750px) {
-  .title-container {
-    margin: auto;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 40%;
-    /* padding-bottom: 30px; */
-    position: static;
-    text-align: center;
-    left: 0%;
-    font-size: medium;
-    /* top: 30%; */
-   }
 
   h1 {
     font-size: 1.9rem; }
@@ -326,8 +309,8 @@ position: absolute;
   h2 {
     font-size: 1.65rem; }
 
-  .arrow {
-    display: none; }
+  /* .arrow {
+    display: none; } */
 
   .navbar-toggler {
     position: fixed;
@@ -345,6 +328,20 @@ position: absolute;
     text-align: center; } }
 
 @media screen and (max-width: 992px) {
+  #background {
+    width: 100%;
+    height: 100vh;
+    background-image: none;
+    background-color: #CBE7FD;
+  }
+  .title-container {
+    font-size: small;
+    padding-top: 90%;
+    padding-left: 5%;
+    padding-right: 5%;
+    position: static;
+    text-align: center;
+   }
   .reorder {
     display: flex;
     flex-direction: column;
